--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /Dataset_Analysis/Evaluated_Data_Comparing/Ziped_Evaluated_Data/
 /Dataset_Analysis/Evaluated_Data_Comparing/Unziped_Evaluated_Data/
 /Dataset_Analysis/Evaluated_Data_Comparing/analysis_results.txt
+/logs/
